HighloadAPI/yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpc-highload-api-deployment
  labels:
    app: dpc-highload-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dpc-highload-api
  template:
    metadata:
      labels:
        app: dpc-highload-api
    spec:
      containers:
      - name: dpc-highload-api
        image: spbdocker03:5000/dpc_highload_api:||version||
        ports:
        - containerPort: 80
