HighloadAPI/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dpc-highload-api
spec:
  type: ClusterIP
  selector:
    app: dpc-highload-api
  ports:
  - port: 80
